apps/dssp-targetp-6/qat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-targetp-6
  namespace: qat
  labels:
    backstage.io/kubernetes-id: dssp-targetp-6
    environment: qat
spec:
  selector:
    app: dssp-targetp-6
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-targetp-6-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-targetp-6.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-targetp-6
#             port:
#               number: 80
