apps/dssp-targetp-6/qat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-targetp-6
  namespace: qat
  labels:
    backstage.io/kubernetes-id: dssp-targetp-6
    environment: qat
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /dssp-targetp-6-qat(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: dssp-targetp-6
                port:
                  number: 80
